# Zoi

./: .cliffignore  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CHANGELOG_LOCK_FORMAT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  GEMINI.md  LICENSE  Makefile  PACKAGING.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  TODO.md  binstall.md  build.rs  cliff.toml  configure  error.txt  go.mod  go.sum  main.go  rustfmt.toml  zoi.yaml
.cargo/: config.toml
.forgejo/: pull_request_template.md
.forgejo/issue_template/: bug-report.yaml  config.yml  enhancement-request.yaml  feature-request.yaml
.forgejo/workflows/: demo.yml  test.yml
.github/ISSUE_TEMPLATE/: Bug Report.md  Enhancement Request.md  Feature Request.md
.github/workflows/: gitlab-mirror.yml
.gitlab/: pull_request_template.md
.gitlab/duo/flows/: gemini.yml
.gitlab/issue_templates/: Bug Report.md  Enhancement Request.md  Feature Request.md
.gitlab/merge_request_templates/: Default.md
app/: apps.json  checksums.txt  install.ps1  install.ps1.asc  install.sh  install.sh.asc  pkg.schema.json  version.json  zm.ps1  zm.sh
cmd/: about.go  check.go  create.go  env.go  info.go  init.go  make.go  pkg.go  pkg_build.go  pkg_clone.go  pkg_doctor.go  pkg_install.go  pkg_list.go  pkg_search.go  pkg_sync.go  pkg_trust.go  pkg_uninstall.go  pkg_update.go  pkg_view.go  root.go  run.go  set.go  update.go  version.go  vm.go  vm_install.go  vm_uninstall.go  vm_use.go
docs/: archives.md  archives.mdx  comparisons.mdx  config.mdx  creating-packages.md  creating-packages.mdx  dependencies.md  dependencies.mdx  examples.md  examples.mdx  extensions.mdx  features.mdx  index.md  index.mdx  lock-file-v1.md  lua-api-cookbook.mdx  lua-api.mdx  lua-plugin-api.mdx  meta.json  migrate.mdx  packaging.mdx  project-config.md  project-config.mdx  publishing-packages.mdx  repositories.md  repositories.mdx  rollbacks.md  rollbacks.mdx  specs.md  system-config.mdx  telemetry.md  telemetry.mdx  zoidberg.mdx
docs/guides/: backup-restore.mdx  cicd.mdx  index.md  index.mdx  mirroring.mdx  offline.mdx  omamix.md  omamix.mdx  rollback.mdx  security-advisories.mdx  security-policy.mdx  transaction-hooks.mdx  windows.mdx
docs/lib/: architecture.mdx  examples.md  examples.mdx  index.md  index.mdx
examples/: project-scope-usage.md
scripts/: archive.sh  build-linux.sh  build-macos.sh  build-release.ps1  build-release.sh  build.ps1  build.sh  log.sh  publish.sh  release.sh
src/: cli.rs  commands.go  config.go  lib.rs  main.go  main.rs  maker.go  project.go  types.go  utils.go  utils.rs  version.go
src/ai/: anthropic.go  azure.go  bedrock.go  factory.go  google.go  huggingface.go  models.go  openai.go  openai_compatible.go  openrouter.go  provider.go  vertex.go
src/cmd/: about.rs  audit.rs  autoremove.rs  build.rs  cache.rs  check.rs  clean.rs  clone.rs  create.rs  dev.rs  doctor.rs  downgrade.rs  env.rs  exec.rs  extension.rs  files.rs  gen_man.rs  helper.rs  history.rs  info.rs  install.rs  list.rs  make.rs  man.rs  mark.rs  meta.rs  mod.rs  owner.rs  pgp.rs  pin.rs  pkg_config.rs  provides.rs  repo.rs  rollback.rs  run.rs  search.rs  setup.rs  shell.rs  show.rs  start.rs  (+11 more)
src/cmd/package/: build.rs  install.rs  meta.rs  mod.rs  test.rs
src/commands/: about.go  ai_commit.go  ai_diff.go  ai_diff_tui.go  ai_helpers.go  ai_issue.go  ai_log.go  ai_pr.go  ai_viewer_tui.go  check.go  commit.go  commit_tui.go  config.go  create.go  env.go  git_hosting.go  info.go  init.go  init_model_tui.go  init_preset.go  init_tui.go  install.go  make.go  provider_forgejo.go  provider_github.go  run.go  types.go  uninstall.go  update.go  usage.go  utils.go  version.go  vm.go
src/config/: config.go
src/pkg/: audit.rs  autoremove.rs  cache.rs  clone.rs  config.rs  config_handler.rs  create.rs  db.rs  dependencies.rs  doctor.rs  exec.rs  extension.rs  hash.rs  helper.rs  hooks.rs  install.rs  library.rs  local.rs  lock.rs  lua_parser.rs  mini_resolve.rs  mod.rs  offline.rs  pgp.rs  pin.rs  pkgdir.rs  purl.rs  recorder.rs  repo_install.rs  resolve.rs  rollback.rs  script_handler.rs  service.rs  shim.rs  sync.rs  sysroot.rs  system.rs  telemetry.rs  transaction.rs  types.rs  (+4 more)
src/pkg/hooks/: global.rs  mod.rs
src/pkg/install/: flow.rs  installer.rs  lockfile.rs  manifest.rs  mod.rs  plan.rs  post_install.rs  prebuilt.rs  pubgrub.rs  resolver.rs  util.rs  verification.rs
src/pkg/install/methods/: binary.rs  com_binary.rs  installer.rs  mod.rs  script.rs  source.rs
src/pkg/lua/: functions.rs  parser.rs
src/pkg/package/: build.rs  docker.rs  doctor.rs  install.rs  meta.rs  mod.rs  structs.rs  test.rs
src/pkg/pgp/: mod.rs
src/pkg/plugin/: mod.rs
src/pkg/pm/: managers.json
src/pkgmanager/: download.go  resolver.go  trust.go  types.go  url.go  verification.go
src/project/: config.rs  environment.rs  executor.rs  lockfile.rs  lockfile_v1.rs  mod.rs  runner.rs  verify.rs
src/vm/: golang.go
test_assets/: packages.json  repo.yaml
tests/: atomic_shims.rs  audit.rs  cli.rs  config.rs  dependency_detection.rs  dependency_resolution.rs  ephemeral.rs  extensions.rs  frozen_lockfile.rs  helper.rs  hooks.rs  integration.rs  local_install_resolution.rs  mini.rs  offline.rs  package_doctor.rs  package_parsing.rs  plugins.rs  policy.rs  project_workflows.rs  provides.rs  purl.rs  resolution.rs  rollback.rs  security.rs  security_advisories.rs  service.rs  shims.rs  sysroot.rs  telemetry.rs  transactions.rs  uninstall.rs  utils.rs  version_test.go
tests/assets/: ZSA-2026-D0042.sec.yaml  registries.json  repo.yaml
tests/common/: mod.rs
version/: package.json  version.js
