[package]
name = "zoi-cli"
version = "3.7.2-beta-prod"
edition = "2024"
description = "Universal Package Manager & Environment Setup Tool"
license = "Apache-2.0"
repository = "https://gitlab.com/Zillowe/Zillwen/Zusty/Zoi"
homepage = "https://zillowe.rf.gd/zds/zoi"
documentation = "https://zillowe.rf.gd/docs/zds/zoi"
keywords = ["cli", "package-manager", "dev-tools", "universal", "environment"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "zoi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
bsdiff = "0.2.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
clap_complete = "4.5.55"
colored = "3.0.0"
comfy-table = "7.1.4"
dialoguer = "0.11.0"
dirs = "6.0.0"
flate2 = "1.1.2"
git2 = "0.20.2"
hex = "0.4.3"
home = "0.5.11"
indicatif = "0.18.0"
nix = { version = "0.30.1", features = ["user"] }
openssl = { version = "0.10.73", features = ["vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
self_update = "0.42.0"
semver = "1.0.26"
sequoia-openpgp = { version = "2.0.0", default-features = false, features = ["crypto-openssl"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5.0"
winapi = { version = "0.3.9", features = ["securitybaseapi", "winnt"] }
xz2 = "0.1.7"
zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
zstd = "0.13.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
