[package]
name = "zoi-rs"
version = "1.4.0"
edition = "2024"
rust-version = "1.88.0"
description = "Universal Package Manager & Environment Setup Tool"
license = "Apache-2.0"
repository = "https://github.com/Zillowe/Zoi"
homepage = "https://zillowe.qzz.io/zds/zoi"
documentation = "https://docs.rs/zoi-rs/latest/zoi"
keywords = ["cli", "package-manager", "dev-tools", "universal", "environment"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
build = "build.rs"
exclude = [
  "packages/*",
  ".github",
  ".gitlab",
  "app/*",
  "docs/*",
  "scripts/*",
  ".gitlab-ci.yml",
  "CONTRIBUTING.md",
  "zoi.yaml",
  "AGENTS.md",
]

[lib]
name = "zoi"
path = "src/lib.rs"

[[bin]]
name = "zoi"
path = "src/main.rs"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[package.metadata.cargo-machete]
ignored = ["openssl"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive", "color"] }
clap_complete = "4.5.55"
clap_mangen = "0.2.29"
colored = "3.0.0"
comfy-table = "7.1.4"
crossterm = "0.29.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
flate2 = "1.1.4"
fs2 = "0.4.3"
git2 = "0.20.2"
hex = "0.4.3"
home = "0.5.11"
indicatif = "0.18.0"
junction = "1.3.0"
md5 = "0.8.0"
mlua = { version = "0.11.3", features = ["luau", "serde"] }
nix = { version = "0.30.1", features = ["user"] }
openssl = { version = "0.10.73", features = ["vendored"] }
pulldown-cmark = { version = "0.13.0", default-features = false }
ratatui = { version = "0.29.0", features = ["crossterm"] }
rayon = "1.11.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
self_update = "0.42.0"
semver = "1.0.26"
sequoia-openpgp = { version = "2.0.0", default-features = false, features = [
  "crypto-openssl",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
phf = { version = "0.13.1", features = ["macros"] }
sha2 = "0.10.9"
spdx = "0.12.0"
syntect = "5.2.0"
tar = "0.4.44"
tempfile = "3.20.0"
toml = "0.9.7"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v7"] }
walkdir = "2.5.0"
winapi = { version = "0.3.9", features = ["securitybaseapi", "winnt"] }
xz2 = "0.1.7"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
zstd = "0.13.3"

[build-dependencies]
dotenvy = "0.15.7"
phf = { version = "0.13.1", features = ["macros"] }
phf_codegen = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

